# oci-voice-drivethru

./: .env.example  .gitignore  README.md  pyproject.toml  schema.sql
agent/: __init__.py  brain.py  config.py  data_channel.py  db.py  main.py  menu.py  oci_grok_tts.py  oci_stt.py  order_state.py  supervisor.py  tools.py  userdata.py
deploy/: RUNBOOK.md  kiosk-launch.command  livekit.yaml.tmpl  nginx-voice-drivethru.locations  patch_vm_env.sh  setup_vm.sh  voicedt-agent.service  voicedt-livekit.service  voicedt-web.service
deploy/booth-qr/: poster-bw.html  poster.html
deploy/windows/: install-services.ps1  kiosk-launch.bat
frontend/: index.html
qr_signup/: index.html
scripts/: exercise_reset_rpc.py  slice_menu.py
tests/: test_brain.py  test_demo_walkthrough.py  test_order.py  test_supervisor.py  test_token_endpoint.py  test_tools_contract.py
tests/e2e/: test_kiosk_isolation.py
tests/integration/: test_multiuser_isolation.py
web/: server.py
